feat: implement own profile endpoints (#17)
* feat: implement own profile endpoints

* docs: update private route documentation
